--- a/crowdfunding03-admin-entity/pom.xml
+++ b/crowdfunding03-admin-entity/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>crowdfunding03-admin-entity</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
